💄 Add Geist font and fix dark mode support

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,6 +4,27 @@
 
 @layer base {
 
+
+
+
+  /* Register your custom font family and tell the browser where to find it. */
+  @font-face {
+    font-family: 'Geist';
+    src: url('/fonts/Geist-1.3.0/variable-woff/GeistVF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  /* Register your custom font family and tell the browser where to find it. */
+  @font-face {
+    font-family: 'Geist Mono';
+    src: url('/fonts/GeistMono-1.3.0/variable-woff/GeistMonoVF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
   :root,
   html[data-theme="light"] {
     --color-fill: 240, 240, 234;
@@ -15,12 +36,13 @@
   }
 
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
+    --color-fill: 33, 39, 39;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 75, 8;
+
   }
 
   #sun-svg,
@@ -35,9 +57,9 @@
 
   body {
     @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
-    font-family: 'Inconsolata', sans-serif;
+    font-family: 'inconsolata', sans-serif;
     font-weight: 100;
-    /*font-size: 1.15rem;*/
+    font-size: 0.85rem;
   }
 
   section,
@@ -100,5 +122,17 @@
   .focus-outline {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
+
+}
+
+html[data-theme='dark'] {
+  .prose {
+    --tw-prose-headings: #f9f9f9;
+    --tw-prose-body: rgb(255, 255, 255);
+    --tw-prose-link: #ff6b01;
+    --tw-prose-bold: #f9f9f9;
+    --tw-prose-counters: var(--tw-prose-body)
+  }
+
 
 }
